confirm workout visit
