# internal/commands/dto/calendar_types.go
@@ -6,9 +6,21 @@ type WorkoutsCalendarModel struct {
 	Upcoming []*WorkoutStatisticModel `json:"upcoming"`
 }
 
+type WorkoutStatisticShortModel struct {
+	Id            string    `json:"id"`
+	ScheduledDate JsonDate  `json:"scheduledDate"`
+	WorkoutDate   *JsonDate `json:"workoutDate,omitempty"`
+}
+
 type WorkoutStatisticModel struct {
 	Id            string            `json:"id"`
 	ScheduledDate JsonDate          `json:"scheduledDate"`
 	WorkoutDate   *JsonDate         `json:"workoutDate,omitempty"`
 	Workout       *WorkoutFullModel `json:"workout,omitempty"`
+	Comment       *string           `json:"comment,omitempty"`
+}
+
+type ConfirmVisitModel struct {
+	Comment     *string   `json:"comment,omitempty"`
+	WorkoutDate *JsonDate `json:"workoutDate,omitempty"`
 }
