# internal/models/confirm_visit.go
@@ -1,0 +1,9 @@
+package models
+
+import "time"
+
+type ConfirmVisit struct {
+	WorkoutVisitId string
+	Comment        *string
+	WorkoutDate    *time.Time
+}
